# IssueScout

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md
backend/: .env.example  README.md  pyproject.toml
backend/issuescout/: __main__.py  main.py
backend/issuescout/application/: container.py  evaluation_service.py  prediction_service.py  repository_service.py  scan_service.py
backend/issuescout/cli/: main.py
backend/issuescout/core/: config.py  logging.py
backend/issuescout/evaluation/: benchmark.py  evaluator.py  exporter.py  ground_truth.py  loader.py  metrics.py  models.py  pipeline.py  report_builder.py
backend/issuescout/evidence/: __init__.py  collector.py  comments.py  commits.py  timeline.py
backend/issuescout/github/: cache.py  client.py  commits.py  issue_comments.py  issues.py  timeline.py
backend/issuescout/middleware/: __init__.py  logging.py
backend/issuescout/models/: __init__.py  analysis.py  explanation.py  issue.py  pull_request.py  scan_context.py  scan_result.py
backend/issuescout/output/: __init__.py  console.py  explanation.py  json.py
backend/issuescout/prediction/: __init__.py  analysis_service.py  candidate_generator.py  confidence_service.py  explanation_builder.py  explanation_metadata.py  explanation_service.py  prediction_service.py  reason_builder.py
backend/issuescout/presentation/: __init__.py  console_reporter.py
backend/issuescout/profiles/: cpython.py  generic.py  registry.py
backend/issuescout/ranking/: __init__.py  ranker.py
(+168 files in other folders)
